# android_device_huawei_u8160

./: Android.mk  AndroidBoard.mk  AndroidProducts.mk  BoardConfig.mk  README  UsbController.cpp  cm.mk  copy-files.sh  device.mk  device_u8160.mk  extract-files.sh  full_u8160.mk  proprietary-files.txt  recovery.fstab  setup-makefiles.sh  system.prop  u8160.mk  vendorsetup.sh
U8160Parts/: Android.mk  AndroidManifest.xml
U8160Parts/res/values/: strings.xml
U8160Parts/src/com/cyanogenmod/U8160Parts/: AttnFM.java  AttnHeadset.java  AttnSpeaker.java  BackProcessLimit.java  CacheSettings.java  Command.java  DeviceSettings.java  GetLogTask.java  MainActivity.java  U8160PartsStartup.java
huawei_brcm_patchram_plus/: Android.mk  brcm_patchram_plus.c  huawei_brcm_patchram_plus.c
include/hardware_legacy/: AudioPolicyManagerBase.h
include/linux/: android_pmem.h  msm_audio.h  msm_mdp.h
libaudio/: Android.mk  AudioHardware.cpp  AudioHardware.h  AudioPolicyManager.cpp  AudioPolicyManager.h
libcamera/: cameraHal.cpp
libcopybit/: Android.mk  NOTICE  copybit.cpp  msm_mdp.h
libgralloc/: Android.mk  framebuffer.cpp  gralloc.cpp  gralloc_priv.h  mapper.cpp
liblights/: Android.mk
mm-core/: Android.mk  Makefile.am  configure.ac  mm-core.mk
mm-core/omxcore/: Android.mk  Makefile  Makefile.am  omxcore.mk
mm-core/omxcore/inc/: OMX_QCOMExtns.h
overlay/frameworks/base/core/res/res/values/: config.xml  dimens.xml  styles.xml
overlay/frameworks/base/core/res/res/xml/: power_profile.xml  storage_list.xml
prebuilt/: init.rc  init.u8160.parts.rc  init.u8160.rc  init.u8160.usb.rc  kernel  qwerty.kl  ramzswap.ko  ueventd.huawei.rc  ueventd.u8160.rc
prebuilt/cdrom/: autorun.iso
prebuilt/etc/: AudioFilter.csv  AudioFilterU8160.csv  init.u8160parts.rc  vold.fstab
prebuilt/etc/bluetooth/: audio.conf
prebuilt/etc/init.d/: 02getmacaddrs  02madteam  02setuphardware  02setuphuawei  02u8160parts
prebuilt/etc/wifi/: wpa_supplicant.conf
prebuilt/lib/egl/: egl.cfg
prebuilt/lib/modules/: cifs.ko  dhd.ko  oprofile.ko  ramzswap.ko  tun.ko
prebuilt/modules/: dhd.ko  ramzswap.ko
prebuilt/usr/idc/: synaptics.idc  touchscreen-keypad.idc  touchscreen.idc  ts_test_input.idc
prebuilt/usr/keylayout/: 7k_handset.kl  surf_keypad.kl
prebuilt/wifi/: dhd.ko  nvram.txt
recovery/: old-recovery_ui.c  postrecoveryboot.sh  recovery_ui.c
rzscontrol/: Android.mk  Makefile  rzscontrol.c
rzscontrol/man/: rzscontrol.1  rzscontrol.html  rzscontrol.xml
